--- a/html/index.html
+++ b/html/index.html
@@ -1,43 +1,115 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Gaceta Galénica</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<style>.card { margin-bottom: 25px; }</style>
+  <title>La Gaceta Galénica</title>
+
+  <!-- Meta -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- FontAwesome JS-->
+  <script defer src="https://kit.fontawesome.com/735709c352.js" crossorigin="anonymous"></script>
+
+  <!-- Theme CSS -->
+  <link rel="stylesheet" href="assets/css/plantilla.css">
+  <link rel="stylesheet" href="assets/fonts/diploma.css">
 </head>
-<body class="bg-light">
-	<div class="container">
-		<main>
-			<div class="px-4 py-5 my-5 text-center">
-				<img class="d-block mx-auto mb-4" src="img/logo.png" alt="" width="330" height="212">
-				<h1 class="display-5 fw-bold">Gaceta Galénica</h1>
-				<div class="col-lg-6 mx-auto">
-					<p class="lead mb-4">La Gaceta Galénica es un boletín científico que se publica el primer miércoles de cada mes.</p>
-				</div>
+
+<body>
+  <header class="header text-center">
+    <h1 class="blog-name pt-lg-4 mb-0">
+      <a class="no-text-decoration" href="index.html">Gaceta Galénica</a>
+    </h1>
+    <nav class="navbar navbar-expand-lg navbar-dark" >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navigation" class="collapse navbar-collapse flex-column" >
+        <div class="profile-section pt-3 pt-lg-0">
+          <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image" />
+          <div class="bio mb-3">
+            La Gaceta Galénica es un boletín científico que se publica el primer miércoles de cada mes y es editado por la Coordinación de Docencia de la Policlínica Lic. Manuel María Valdés.
+          </div>
+          <hr />
+        </div><!--//profile-section-->
+        <ul class="navbar-nav flex-column text-start">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">
+              <i class="fas fa-home fa-fw me-2"></i>Inicio <span class="sr-only">(current)</span>
+            </a>
+          </li>
+					<li class="nav-item">
+					    <a class="nav-link" href="#"><i class="fas fa-bookmark fa-fw me-2"></i>Archivo</a>
+					</li>
+        </ul>
+        <div class="my-2 my-md-3">
+          <a class="btn btn-primary" href="#" target="_blank">Contacto</a>
+        </div>
 			</div>
-			<div class="row">
+    </nav>
+  </header>
 
-				<!-- item -->
-				<div class="col-sm-4">
-					<div class="card">
-						<a href="#" target="_blank"><img src="static/gacetagalenica-V01E01.jpg" class="card-img-top" alt="Gaceta Galénica - V01E01"></a>
-						<div class="card-body">
-							<h5 class="card-title">Gaceta Galénica - V01E01</h5>
-							<a href="#" target="_blank" class="card-link">Descargar</a>
-						</div>
-					</div>
-				</div>
+    <div class="main-wrapper">
 
-			</div>
-		</main>
+      <section class="cta-section theme-bg-light py-5">
+        <div class="container text-center single-col-max-width">
+          <h2 class="heading">La Gaceta Galénica - Boletín Científico</h2>
+          <div class="intro">Suscríbase y reciba La Gaceta Galénica en su buzón de correo electrónico.</div>
+          <div class="single-form-max-width pt-3 mx-auto">
+            <form class="signup-form row g-2 g-lg-2 align-items-center">
+              <div class="col-12 col-md-9">
+                <label class="sr-only" for="semail">Su correo electrónico</label>
+                <input type="email" id="semail" name="semail1" class="form-control me-md-1 semail" placeholder="Introduzca su email">
+              </div>
+              <div class="col-12 col-md-2">
+                <button type="submit" class="btn btn-primary">Suscribirse</button>
+              </div>
+            </form><!--//signup-form-->
+          </div><!--//single-form-max-width-->
+        </div><!--//container-->
+      </section>
 
-		<footer class="my-5 pt-5 text-muted text-center text-small">
-			<p class="mb-1">&#127279; 2022 Gaceta Galénica. Algunos derechos reservados.</p>
-		</footer>
-	</div>
+      <section class="blog-list px-3 py-5 p-md-5">
+        <div class="container single-col-max-width">
 
-<script src="js/bootstrap.bundle.min.js"></script>
+          <div class="item mb-5">
+            <div class="row g-3 g-xl-0">
+              <div class="col-2 col-xl-3">
+                <a href="#">
+                  <img class="img-fluid post-thumb" src="static/gacetagalenica-V01E01.jpg" alt="image">
+                </a>
+              </div>
+              <div class="col">
+                <h3 class="title mb-1"><a class="text-link" href="#">Volumen 1 - Número 1</a></h3>
+                <div class="meta mb-1">
+                  <span class="date">Publicado 1 de junio de 2022</span>
+                </div>
+                <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
+                <a class="text-link" href="#">Leer más &rarr;</a>
+              </div><!--//col-->
+            </div><!--//row-->
+          </div><!--//item-->
+
+			    <nav class="blog-nav nav nav-justified my-5">
+            <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">
+              Siguientes<i class="arrow-prev fas fa-long-arrow-alt-left"></i>
+            </a>
+            <a class="nav-link-next nav-item nav-link rounded" href="#">
+              Anteriores<i class="arrow-next fas fa-long-arrow-alt-right"></i>
+            </a>
+				</nav>
+
+		    </div>
+	    </section>
+
+	    <footer class="footer text-center py-2 theme-bg-dark">
+
+	        <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+            <small class="copyright">Designed with <span class="sr-only">love</span><i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+
+	    </footer>
+
+    </div><!--//main-wrapper-->
+
 </body>
 </html>
