--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
           </div>
           <hr />
         </div><!--//profile-section-->
-        <ul class="navbar-nav flex-column text-start">
+        <!--<ul class="navbar-nav flex-column text-start">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">
               <i class="fas fa-home fa-fw me-2"></i>Inicio <span class="sr-only">(current)</span>
@@ -42,9 +42,10 @@
 					    <a class="nav-link" href="#"><i class="fas fa-bookmark fa-fw me-2"></i>Archivo</a>
 					</li>
         </ul>
+        <hr />
         <div class="my-2 my-md-3">
           <a class="btn btn-primary" href="#" target="_blank">Contacto</a>
-        </div>
+        </div>-->
 			</div>
     </nav>
   </header>
@@ -74,40 +75,42 @@
 
           <div class="item mb-5">
             <div class="row g-3 g-xl-0">
-              <div class="col-2 col-xl-3">
-                <a href="#">
+              <div class="col-3 col-xl-3">
+                <a href="static/gacetagalenica-V01E01.pdf">
                   <img class="img-fluid post-thumb" src="static/gacetagalenica-V01E01.jpg" alt="image">
                 </a>
               </div>
               <div class="col">
-                <h3 class="title mb-1"><a class="text-link" href="#">Volumen 1 - Número 1</a></h3>
+                <h3 class="title mb-1"><a class="text-link" href="static/gacetagalenica-V01E01.pdf">Volumen 1 - Número 1</a></h3>
                 <div class="meta mb-1">
                   <span class="date">Publicado 1 de junio de 2022</span>
                 </div>
-                <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-                <a class="text-link" href="#">Leer más &rarr;</a>
+                <div class="intro">
+                  La Gaceta Galénica nace con esta primera edición como una publicación mensual de
+                  la Coordinación de Docencia del Servicio de Urgencias de la Policlínica Lic.
+                  Manuel María Valdés. Es nuestro interés lanzar una edición el primer miércoles
+                  de cada mes con temas cortos dirigidos a ...
+                </div>
+                <a class="text-link" href="static/gacetagalenica-V01E01.pdf">Leer más &rarr;</a>
               </div><!--//col-->
             </div><!--//row-->
           </div><!--//item-->
 
-			    <nav class="blog-nav nav nav-justified my-5">
+          <!--<nav class="blog-nav nav nav-justified my-5">
             <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">
               Siguientes<i class="arrow-prev fas fa-long-arrow-alt-left"></i>
             </a>
             <a class="nav-link-next nav-item nav-link rounded" href="#">
               Anteriores<i class="arrow-next fas fa-long-arrow-alt-right"></i>
             </a>
-				</nav>
+          </nav>-->
 
-		    </div>
-	    </section>
+        </div>
+      </section>
 
-	    <footer class="footer text-center py-2 theme-bg-dark">
-
-	        <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-            <small class="copyright">Designed with <span class="sr-only">love</span><i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-
-	    </footer>
+      <footer class="footer text-center py-2 theme-bg-dark">
+        <small class="copyright">Creado con <span class="sr-only">love</span><i class="fas fa-heart" style="color: #fb866a;"></i> en Panamá.</small>
+      </footer>
 
     </div><!--//main-wrapper-->
 
